--- a/jakoo-com/partials-l1/header.html
+++ b/jakoo-com/partials-l1/header.html
@@ -6,8 +6,8 @@
                     <ul class="metanavigation--list list-unstyled flex-items-xs-left">
                         <li>
                             <a href="#" class="meta-link">
-                                <span class='sprite -german'>
-                                  <svg viewBox="0 0 1 1" width="20"><use xlink:href='images/icons.svg#german' /></use></svg>
+                                <span class="sprite -german">
+                                  <svg viewBox="0 0 1 1" width="20"><use xlink:href="images/icons-39f292c110.svg#german"/></svg>
                                 </span>
                                 <span>Deutsch <span class="text-muted">(Change language)</span></span>
                             </a>
@@ -19,8 +19,8 @@
                         <li>
                             <a href="#" class="meta-link">
 
-                                <span class='sprite -icon_login'>
-                                      <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_login' /></use></svg>
+                                <span class="sprite -icon_login">
+                                      <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_login"/></svg>
                                     </span>
                                 <span>Anmelden</span>
                             </a>
@@ -28,8 +28,8 @@
                         <li>
                             <a href="#" class="meta-link">
 
-                                <span class='sprite -icon_user'>
-                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_user' /></use></svg>
+                                <span class="sprite -icon_user">
+                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_user"/></svg>
                                 </span>
                                 <span>Mein Kundenkonto</span>
                             </a>
@@ -37,8 +37,8 @@
                         <li>
                             <a href="#" class="meta-link">
 
-                                <span class='sprite -icon_form'>
-                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_form' /></use></svg>
+                                <span class="sprite -icon_form">
+                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_form"/></svg>
                                 </span>
                                 <span>Direktbestellformular</span>
                             </a>
@@ -46,8 +46,8 @@
                         <li>
                             <a href="#" class="meta-link">
 
-                                <span class='sprite -icon_heart'>
-                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_heart' /></use></svg>
+                                <span class="sprite -icon_heart">
+                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_heart"/></svg>
                                 </span>
                                 <span>Freundschaftswerbung</span>
                             </a>
@@ -55,8 +55,8 @@
                         <li>
                             <a href="#" class="meta-link">
 
-                                <span class='sprite -icon_shops'>
-                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_shops' /></use></svg>
+                                <span class="sprite -icon_shops">
+                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_shops"/></svg>
                                 </span>
                                 <span>Alle Filialen</span>
                             </a>
@@ -70,15 +70,15 @@
         <div class="row header-middle">
             <div id="logo" class="col-xs-3">
                 <div class="logo-wrapper">
-                    <a href="index.html"><img src="images/j-logo.png" alt="JAKO-O"></a>
+                    <a href="index.html"><img src="images/j-logo-11198642ed.png" alt="JAKO-O"></a>
                 </div>
             </div>
             <div class="col-xs-6">
                 <div class="input-group"><input class="form-control" placeholder="Was möchten Sie finden?">
                     <span class="input-group-btn">
                         <button class="btn btn-search" type="button">
-                            <span class='sprite -icon_search'>
-                                <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_search' /></use></svg>
+                            <span class="sprite -icon_search">
+                                <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_search"/></svg>
                             </span>
                         </button>
                     </span>
@@ -87,8 +87,8 @@
             <div class="col-xs-3">
                 <a href="#" class="header-cart">
                     <div class="cart-icon">
-                        <span class='sprite -icon_cart'>
-                            <svg viewBox="0 0 1 1" width="44"><use xlink:href='images/icons.svg#icon_cart' /></use></svg>
+                        <span class="sprite -icon_cart">
+                            <svg viewBox="0 0 1 1" width="44"><use xlink:href="images/icons-39f292c110.svg#icon_cart"/></svg>
                         </span>
                         <div class="cart-number">
                             <span>13</span>
@@ -109,32 +109,32 @@
     <ul class="list-unstyled main-nav--list">
         <li class="has-sub">
             <a href="#" class="main-nav-level1--item"><span>Unser Sortiment</span>
-                <span class="sprite -menu-down-arrow ">
-                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#menu-down-arrow"></use></svg>
+                <span class="sprite -menu-down-arrow">
+                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#menu-down-arrow"></use></svg>
                 </span>
             </a>
             <ul class="main-nav-level2">
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kindermode.png" width="32" height="32" alt=""></span><span class="text"><span>Kindermode</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_spielzeug.png" width="32" height="32" alt=""></span><span class="text"><span>Spielzeug</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text"><span>Baby</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sport.png" width="32" height="32" alt=""></span><span class="text"><span>Sport</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kinderzimmer.png" width="32" height="32" alt=""></span><span class="text"><span>Kinderzimmer</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_praktisches.png" width="32" height="32" alt=""></span><span class="text"><span>Praktisches</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_basteln.png" width="32" height="32" alt=""></span><span class="text"><span>Basteln</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_medien.png" width="32" height="32" alt=""></span><span class="text"><span>Medien</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sale.png" width="32" height="32" alt=""></span><span class="text"><span>Sale</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kindermode-bef66fe1b0.png" width="32" height="32" alt=""></span><span class="text"><span>Kindermode</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_spielzeug-ab551bfe17.png" width="32" height="32" alt=""></span><span class="text"><span>Spielzeug</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text"><span>Baby</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sport-6432abb441.png" width="32" height="32" alt=""></span><span class="text"><span>Sport</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kinderzimmer-09b7c9f051.png" width="32" height="32" alt=""></span><span class="text"><span>Kinderzimmer</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_praktisches-a48df4aec4.png" width="32" height="32" alt=""></span><span class="text"><span>Praktisches</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_basteln-b23db33a7d.png" width="32" height="32" alt=""></span><span class="text"><span>Basteln</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_medien-550190342a.png" width="32" height="32" alt=""></span><span class="text"><span>Medien</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sale-26742bd334.png" width="32" height="32" alt=""></span><span class="text"><span>Sale</span></span></a></li>
             </ul>
         </li>
         <li class="has-sub">
             <a href="#" class="main-nav-level1--item"><span>Themenwelten</span>
-                <span class="sprite -menu-down-arrow ">
-                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#menu-down-arrow"></use></svg>
+                <span class="sprite -menu-down-arrow">
+                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#menu-down-arrow"></use></svg>
                 </span>
             </a>
             <ul class="main-nav-level2">
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text">Kindermode</span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text">Spielzeug</span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text">Baby</span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text">Kindermode</span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text">Spielzeug</span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text">Baby</span></a></li>
             </ul>
         </li>
         <li><a href="#" class="main-nav-level1--item"><span>Service</span></a></li>
