--- a/jakoo-com/partials-l1/mainnav.html
+++ b/jakoo-com/partials-l1/mainnav.html
@@ -2,32 +2,32 @@
     <ul class="list-unstyled main-nav--list">
         <li class="has-sub">
             <a href="#" class="main-nav-level1--item"><span>Unser Sortiment</span>
-                <span class="sprite -menu-down-arrow ">
-                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#menu-down-arrow"></use></svg>
+                <span class="sprite -menu-down-arrow">
+                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#menu-down-arrow"></use></svg>
                 </span>
             </a>
             <ul class="main-nav-level2">
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kindermode.png" width="32" height="32" alt=""></span><span class="text"><span>Kindermode</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_spielzeug.png" width="32" height="32" alt=""></span><span class="text"><span>Spielzeug</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text"><span>Baby</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sport.png" width="32" height="32" alt=""></span><span class="text"><span>Sport</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kinderzimmer.png" width="32" height="32" alt=""></span><span class="text"><span>Kinderzimmer</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_praktisches.png" width="32" height="32" alt=""></span><span class="text"><span>Praktisches</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_basteln.png" width="32" height="32" alt=""></span><span class="text"><span>Basteln</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_medien.png" width="32" height="32" alt=""></span><span class="text"><span>Medien</span></span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sale.png" width="32" height="32" alt=""></span><span class="text"><span>Sale</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kindermode-bef66fe1b0.png" width="32" height="32" alt=""></span><span class="text"><span>Kindermode</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_spielzeug-ab551bfe17.png" width="32" height="32" alt=""></span><span class="text"><span>Spielzeug</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text"><span>Baby</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sport-6432abb441.png" width="32" height="32" alt=""></span><span class="text"><span>Sport</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_kinderzimmer-09b7c9f051.png" width="32" height="32" alt=""></span><span class="text"><span>Kinderzimmer</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_praktisches-a48df4aec4.png" width="32" height="32" alt=""></span><span class="text"><span>Praktisches</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_basteln-b23db33a7d.png" width="32" height="32" alt=""></span><span class="text"><span>Basteln</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_medien-550190342a.png" width="32" height="32" alt=""></span><span class="text"><span>Medien</span></span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_sale-26742bd334.png" width="32" height="32" alt=""></span><span class="text"><span>Sale</span></span></a></li>
             </ul>
         </li>
         <li class="has-sub">
             <a href="#" class="main-nav-level1--item"><span>Themenwelten</span>
-                <span class="sprite -menu-down-arrow ">
-                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#menu-down-arrow"></use></svg>
+                <span class="sprite -menu-down-arrow">
+                    <svg viewBox="0 0 1 1"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#menu-down-arrow"></use></svg>
                 </span>
             </a>
             <ul class="main-nav-level2">
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text">Kindermode</span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text">Spielzeug</span></a></li>
-                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby.png" width="32" height="32" alt=""></span><span class="text">Baby</span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text">Kindermode</span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text">Spielzeug</span></a></li>
+                <li class="has-sub"><a href="#" class="main-nav-level2--item"><span><img src="images/icons/icon_baby-ea1000c7b9.png" width="32" height="32" alt=""></span><span class="text">Baby</span></a></li>
             </ul>
         </li>
         <li><a href="#" class="main-nav-level1--item"><span>Service</span></a></li>
