--- a/jakoo-com/partials-l2/ajax/short-pds.html
+++ b/jakoo-com/partials-l2/ajax/short-pds.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </div>
-            <div class="music-player" data-module="MusicPlayer" style="display:none;">
+            <div class="music-player" data-module="MusicPlayer" style="display:none">
                 <div class="row">
                     <div class="col-xs-8 col-sm-12 col-md-12 col-lg-7 col-xl-6 m-b-1">
                         <a href="#" class="btn btn-icon-prev btn-secondary btn-sm" data-module="AudioPreview">Zurück zur Gallerie</a>
@@ -58,22 +58,22 @@
                         </p>
                         <div class="pds-player">
                             <div class="player-controls">
-                                <span class='sprite -icon_player_previous'>
-                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_player_previous' /></use></svg>
+                                <span class="sprite -icon_player_previous">
+                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_player_previous"/></svg>
                                 </span>
-                                <span class='sprite -icon_player_play'>
-                                    <svg viewBox="0 0 1 1" width="24"><use xlink:href='images/icons.svg#icon_player_play' /></use></svg>
+                                <span class="sprite -icon_player_play">
+                                    <svg viewBox="0 0 1 1" width="24"><use xlink:href="images/icons-39f292c110.svg#icon_player_play"/></svg>
                                 </span>
-                                <span class='sprite -icon_player_pause'>
-                                    <svg viewBox="0 0 1 1" width="24"><use xlink:href='images/icons.svg#icon_player_pause' /></use></svg>
+                                <span class="sprite -icon_player_pause">
+                                    <svg viewBox="0 0 1 1" width="24"><use xlink:href="images/icons-39f292c110.svg#icon_player_pause"/></svg>
                                 </span>
-                                <span class='sprite -icon_player_next'>
-                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_player_next' /></use></svg>
+                                <span class="sprite -icon_player_next">
+                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_player_next"/></svg>
                                 </span>
                             </div>
                             <div class="volume-controls" data-module="NoUiSlider">
-                                <span class='sprite -icon_player_volume'>
-                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_player_volume' /></use></svg>
+                                <span class="sprite -icon_player_volume">
+                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_player_volume"/></svg>
                                 </span>
                                 <div id="volume"></div>
                             </div>
@@ -84,8 +84,8 @@
                             <li class="list-group-item list-group-item-action">
                                 <span>Die Reise beginnt ... auf ins Orchester</span>
                             </li>
-                            <li class="list-group-item list-group-item-action item-active"><span class="sprite -icon_player_volume" style="display:none;">
-                                <svg viewBox="0 0 1 1" width="12"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#icon_player_volume"></use></svg>
+                            <li class="list-group-item list-group-item-action item-active"><span class="sprite -icon_player_volume" style="display:none">
+                                <svg viewBox="0 0 1 1" width="12"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#icon_player_volume"></use></svg>
                             </span><span>Die Geige will immer die erste sein</span>
                                 </li>
                             <li class="list-group-item list-group-item-action"><span>Nola Note und die Streicher</span></li>
@@ -114,12 +114,12 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="product-details">
-                        <div class="brand" style="margin:5px 0;">
+                        <div class="brand" style="margin:5px 0">
                             <span class="hidden-md-up">
                                 JAKO-O
                             </span>
                             <div class="hidden-sm-down">
-                                <img src="images/j-logo.png" width="70" alt="">
+                                <img src="images/j-logo-11198642ed.png" width="70" alt="">
                             </div>
                         </div>
                         <div class="product-title">
@@ -168,14 +168,14 @@
                                 </span>
                             </div>
                         </li>
-                        <li class="variant-item available ">
+                        <li class="variant-item available">
                             <div class="variant-wrap">
                                 <a href="#">
                                     <img src="http://www.jako-o.de/medias/sys_master/productpictures/h6d/h3d/h26/8878212677662.jpg" alt="">
                                 </a>
                             </div>
                         </li>
-                        <li class="variant-item available ">
+                        <li class="variant-item available">
                             <div class="variant-wrap">
                                 <a href="#">
                                     <img src="http://www.jako-o.de/medias/sys_master/productpictures/h66/h3d/h26/8878212448286.jpg" alt="">
@@ -197,17 +197,17 @@
                                 <span>140/146</span>
                             </div>
                         </li>
-                        <li class="variant-item available ">
+                        <li class="variant-item available">
                             <div class="variant-wrap">
                                 <a href="#">152/158</a>
                             </div>
                         </li>
-                        <li class="variant-item available ">
+                        <li class="variant-item available">
                             <div class="variant-wrap">
                                 <a href="#">164/170</a>
                             </div>
                         </li>
-                        <li class="variant-item soldOut ">
+                        <li class="variant-item soldOut">
                             <div class="variant-wrap">
                                 <a href="#">176/182</a>
                             </div>
@@ -223,7 +223,7 @@
                 <div class="col-xs-6">
                     <select name="farbe" id="farbe">
                         <option value="1">Farbe 1</option>
-                        <option value="2" disabled>Farbe 2 (ausverkauft)</option>
+                        <option value="2" disabled="disabled">Farbe 2 (ausverkauft)</option>
                         <option value="3">Farbe 3</option>
                         <option value="4">Farbe 4</option>
                         <option value="5">Farbe 5</option>
@@ -232,7 +232,7 @@
                 <div class="col-xs-6">
                     <select name="groesse" id="groesse">
                         <option value="1">Gr&ouml;&szlig;e 1</option>
-                        <option value="2" disabled>Gr&ouml;&szlig;e 2 (ausverkauft)</option>
+                        <option value="2" disabled="disabled">Gr&ouml;&szlig;e 2 (ausverkauft)</option>
                         <option value="3">Gr&ouml;&szlig;e 3</option>
                         <option value="4">Gr&ouml;&szlig;e 4</option>
                         <option value="5">Gr&ouml;&szlig;e 5</option>
@@ -245,15 +245,15 @@
                     <div class="accordion js-personalize-toggle-container">
                         <div class="accordion-item">
                             <div class="accordion-link js-toggle" data-target=".jsPersonalize" data-status="inactive" data-hasfn="" data-eventid="0">
-                                <span class='sprite -icon_personalize'>
-                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_personalize' /></use></svg>
+                                <span class="sprite -icon_personalize">
+                                    <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_personalize"/></svg>
                                 </span>
                                 <span>Produkt personalisieren</span>
                                 <div class="personalize-switch">
                                     <label for="personalize" class="switch"></label>
                                 </div>
                             </div>
-                            <div class="accordion-content-wrapper jsPersonalize" style="display: none;">
+                            <div class="accordion-content-wrapper jsPersonalize" style="display: none">
                                 <div class="accordion-content register-checkout-section">
                                     <div class="row">
                                         <div class="col-xs-12">
@@ -320,7 +320,7 @@
 
                     </div>
                     <div class="price">
-                        <div style="display:flex;">
+                        <div style="display:flex">
                             <span class="discount-percentage">-38% </span>
                             <span class="cross-out-price">4234,95 €</span>
                         </div>
@@ -329,7 +329,7 @@
                 </div>
             </div>
         </div>
-        <div class="price-personalize text-xs-right" style="display:none;">
+        <div class="price-personalize text-xs-right" style="display:none">
             <small>Personalisierung <strong>+ 5,00 €</strong></small>
         </div>
     </div>
@@ -353,7 +353,7 @@
             </div>
         </div>
 
-        <div class="price-personalize text-xs-right" style="display:none;">
+        <div class="price-personalize text-xs-right" style="display:none">
             <small>Personalisierung <strong>+ 5,00 €</strong></small>
         </div>
     </div>
@@ -372,7 +372,7 @@
 
                     </div>
                     <div class="price">
-                        <div style="display:flex;">
+                        <div style="display:flex">
                             <span class="discount-percentage">-38% </span>
                             <span class="cross-out-price">4234,95 €</span>
                         </div>
@@ -381,10 +381,10 @@
                 </div>
             </div>
         </div>
-        <div class=" text-xs-right">
-            <small>2,00€ / 100g</strong></small>
+        <div class="text-xs-right">
+            <small>2,00€ / 100g</small>
         </div>
-        <div class="price-personalize text-xs-right" style="display:none;">
+        <div class="price-personalize text-xs-right" style="display:none">
             <small>Personalisierung <strong>+ 5,00 €</strong></small>
         </div>
     </div>
@@ -401,7 +401,7 @@
                             <input type="hidden" name="productCodePost" value="071710">
                             <a href="#" id="addToCartButton" class="btn btn-primary btn-icon btn-lg btn-block js-add-to-cart btn-addToCart">
                                 <span class="sprite -icon_cart">
-                                    <svg viewBox="0 0 1 1" width="32"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#icon_cart"></use></svg>
+                                    <svg viewBox="0 0 1 1" width="32"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#icon_cart"></use></svg>
                                 </span>
                                 <span>In den Warenkorb</span>
                             </a>
@@ -412,22 +412,22 @@
                     </div>
                     <div class="m-t-1">
                         <a href="#" class="btn btn-secondary btn-sm btn-block">
-                            <span class='sprite -icon_heart'>
+                            <span class="sprite -icon_heart">
                                 <svg viewBox="0 0 1 1" width="16">
-                                    <use xlink:href='images/icons.svg#icon_heart' /></use>
+                                    <use xlink:href="images/icons-39f292c110.svg#icon_heart"/>
                                 </svg>
                             </span>
                             <span>
                             <span>Merkzettel</span>
-                        </a>
+                        </span></a>
                     </div>
                     <div class="AddToCart-ShareOnSocialNetworkAction" data-index="2">
                         <ul class="list-unstyled add-to-cart-links">
                             <li>
                                 <a href="#">
-                                    <span class='sprite -icon_gift'>
+                                    <span class="sprite -icon_gift">
                                         <svg viewBox="0 0 1 1" width="16">
-                                            <use xlink:href='images/icons.svg#icon_gift' /></use>
+                                            <use xlink:href="images/icons-39f292c110.svg#icon_gift"/>
                                         </svg>
                                     </span>
                                     <span>Geschenketisch</span>
@@ -436,9 +436,9 @@
                             <li>
                                 <!-- AddToAny BEGIN -->
                                 <a class="a2a_dd share" href="https://www.addtoany.com/share#url=https%3A%2F%2Fwww.fit-z.com%2Fde_DE%2F2-in-1-shirt-print--071710&amp;title=2-in-1-Shirt%20Print%20%7C%20fuchsia%20(304)%20%7C%20Farbe%20Bekleidung%2FHartware%20%7C%20FIT-Z%20Online%20Shop%20%7C%20FIT-Z%20-%20best%20for%20teens">
-                                    <span class='sprite -icon_share'>
+                                    <span class="sprite -icon_share">
                                         <svg viewBox="0 0 1 1" width="16">
-                                            <use xlink:href='images/icons.svg#icon_share' /></use>
+                                            <use xlink:href="images/icons-39f292c110.svg#icon_share"/>
                                         </svg>
                                     </span>
                                     <span>Weiterempfehlen</span>
