--- a/jakoo-com/partials-l2/breadcrumb.html
+++ b/jakoo-com/partials-l2/breadcrumb.html
@@ -5,8 +5,8 @@
                 <div class="container">
                     <ol class="breadcrumb">
                         <li class="start">
-                            <a href="index.html"><span class="breadcrumb-name"><span class='sprite -icon_home'>
-                                <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_home' /></use></svg>
+                            <a href="index.html"><span class="breadcrumb-name"><span class="sprite -icon_home">
+                                <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_home"/></svg>
                             </span></span></a>
                         </li>
                         <li class="active">
