--- a/jakoo-com/partials-l2/content/lightbox.html
+++ b/jakoo-com/partials-l2/content/lightbox.html
@@ -12,8 +12,8 @@
         <div class="col-xs-6">
 
                 <a href="./partials-l2/ajax/produktvideo-lightbox.html" data-cbox-title="Super Titel in der Lightbox" class="btn btn-secondary" data-module="Lightbox">
-                    <span class='sprite -icon_play_filled'>
-                        <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_play_filled' /></use></svg>
+                    <span class="sprite -icon_play_filled">
+                        <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_play_filled"/></svg>
                     </span>
                     <span>Lightbox öffnen</span>
                 </a>
