--- a/jakoo-com/partials-l2/content/pds-content.html
+++ b/jakoo-com/partials-l2/content/pds-content.html
@@ -38,8 +38,7 @@
                                         <div class="quality-control-attributes">
                                             <p class="primary-label">Material &amp; Pflegehinweise</p>
                                             <img src="https://cdn.fit-z.com/content/shop/vignetten/pflegesymbole/p-waschen-30-pflegeleicht.svg" alt="30 °C schonend" title="30 °C schonend">
-                                            <img src="https://cdn.fit-z.com/content/shop/vignetten/pflegesymbole/p-trocknen-nicht-im-waeschetrockner-trocknen.svg" alt="Nicht im Trommeltrockner trocknen" title="Nicht im Trommeltrockner trocknen"> <img
-                                                src="https://cdn.fit-z.com/content/shop/vignetten/pflegesymbole/p-professionelle-textilpflege-trockenreinigung-05.svg" alt="Nicht chemisch reinigen" title="Nicht chemisch reinigen">
+                                            <img src="https://cdn.fit-z.com/content/shop/vignetten/pflegesymbole/p-trocknen-nicht-im-waeschetrockner-trocknen.svg" alt="Nicht im Trommeltrockner trocknen" title="Nicht im Trommeltrockner trocknen"> <img src="https://cdn.fit-z.com/content/shop/vignetten/pflegesymbole/p-professionelle-textilpflege-trockenreinigung-05.svg" alt="Nicht chemisch reinigen" title="Nicht chemisch reinigen">
                                             <img src="https://cdn.fit-z.com/content/shop/vignetten/pflegesymbole/p-bleichen-nicht-bleichen.svg" alt="Bleichen nicht erlaubt" title="Bleichen nicht erlaubt">
                                             <img src="https://cdn.fit-z.com/content/shop/vignetten/pflegesymbole/p-buegeln-maessig-heiss.svg" alt="Bügeln mit mittlerer Temperatur" title="Bügeln mit mittlerer Temperatur">
                                         </div>
@@ -87,7 +86,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xs-12 jsWriteRating" style="display: none;">
+                            <div class="col-xs-12 jsWriteRating" style="display: none">
                                 <div class="write-review js-review-write">
                                     <form id="reviewForm" action="/de_DE/2-in-1-shirt-print--071710/reviewWithEmail" method="post">
                                         <div class="form-group">
@@ -105,7 +104,7 @@
                                         </div>
                                         <div class="form-group">
                                             <div class="form-group control-group">
-                                                <label class="control-label " for="alias"> <span>Ihr Name (wird angezeigt!):</span> <span class="mandatory" title="Pflichtfeld"> *</span> <span class="skip"></span> </label>
+                                                <label class="control-label" for="alias"> <span>Ihr Name (wird angezeigt!):</span> <span class="mandatory" title="Pflichtfeld"> *</span> <span class="skip"></span> </label>
                                                 <div class="controls">
                                                     <input id="alias" name="hffAlias" class="form-control" value="">
                                                 </div>
@@ -113,7 +112,7 @@
                                         </div>
                                         <div class="form-group">
                                             <div class="form-group control-group">
-                                                <label class="control-label " for="email"> <span>E-Mail: (wird nicht angezeigt)</span> <span class="mandatory" title="Pflichtfeld"> *</span> <span class="skip"></span> </label>
+                                                <label class="control-label" for="email"> <span>E-Mail: (wird nicht angezeigt)</span> <span class="mandatory" title="Pflichtfeld"> *</span> <span class="skip"></span> </label>
                                                 <div class="controls">
                                                     <input id="email" name="hffEmail" class="form-control" value="">
                                                 </div>
@@ -133,7 +132,7 @@
                             <div id="showingAllReviews" data-showingallreviews="true"></div>
                             <li class="review-entry">
                                 <div class="review-head">
-                                    <div class="rating js-ratingCalc  " title="title" data-avarage="4.0">
+                                    <div class="rating js-ratingCalc" title="title" data-avarage="4.0">
                                         <div class="rating-stars"> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span>                                            <span class="js-ratingIcon js-rationIconSet star"></span> </div>
                                     </div>
                                     <div class="review-autor"> Annle</div>
@@ -144,7 +143,7 @@
                             </li>
                             <li class="review-entry">
                                 <div class="review-head">
-                                    <div class="rating js-ratingCalc  " title="title" data-avarage="4.0">
+                                    <div class="rating js-ratingCalc" title="title" data-avarage="4.0">
                                         <div class="rating-stars"> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star"></span>                                            <span class="js-ratingIcon js-rationIconSet star"></span> </div>
                                     </div>
                                     <div class="review-autor"> Annle</div>
@@ -155,7 +154,7 @@
                             </li>
                             <li class="review-entry">
                                 <div class="review-head">
-                                    <div class="rating js-ratingCalc  " title="title" data-avarage="4.0">
+                                    <div class="rating js-ratingCalc" title="title" data-avarage="4.0">
                                         <div class="rating-stars"> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span> <span class="js-ratingIcon js-rationIconSet star fullRated"></span>                                            <span class="js-ratingIcon js-rationIconSet star fullRated"></span> </div>
                                     </div>
                                     <div class="review-autor"> Annle</div>
@@ -186,7 +185,7 @@
                                 <div class="img-padding"> <img class="owl-lazy" width="250" data-src="https://cdn.fit-z.com/cs/products//33/64/42/250x250.jpg" alt="Ledersandale Sophia" title="Ledersandale Sophia"> </div>
                                 <div class="details-name">Ledersandale Sophia</div>
                                 <div class="price">
-                                    <div class="price"> <span class="formatted-value ">49,95 €</span> </div>
+                                    <div class="price"> <span class="formatted-value">49,95 €</span> </div>
                                 </div>
                             </a>
                         </div>
@@ -195,7 +194,7 @@
                                 <div class="img-padding"><img class="owl-lazy" width="250" data-src="https://cdn.fit-z.com/cs/products//33/64/59/250x250.jpg" alt="Ledergürtel geflochten" title="Ledergürtel geflochten"> </div>
                                 <div class="details-name">Ledergürtel geflochten</div>
                                 <div class="price">
-                                    <div class="price"> <span class="formatted-value ">24,95 €</span> </div>
+                                    <div class="price"> <span class="formatted-value">24,95 €</span> </div>
                                 </div>
                             </a>
                         </div>
@@ -204,7 +203,7 @@
                                 <div class="img-padding"><img class="owl-lazy" width="250" data-src="https://cdn.fit-z.com/cs/products//33/64/44/250x250.jpg" alt="Hose" title="Hose"> </div>
                                 <div class="details-name">Hose</div>
                                 <div class="price">
-                                    <div class="price"> <span class="formatted-value ">34,95 €</span> </div>
+                                    <div class="price"> <span class="formatted-value">34,95 €</span> </div>
                                 </div>
                             </a>
                         </div>
@@ -213,7 +212,7 @@
                                 <div class="img-padding"><img class="owl-lazy" width="250" data-src="https://cdn.fit-z.com/cs/products//33/42/35/250x250.jpg" alt="Tanktop Ringel" title="Tanktop Ringel"> </div>
                                 <div class="details-name">Tanktop Ringel</div>
                                 <div class="price">
-                                    <div class="price"> <span class="formatted-value ">17,95 €</span> </div>
+                                    <div class="price"> <span class="formatted-value">17,95 €</span> </div>
                                 </div>
                             </a>
                         </div>
@@ -222,7 +221,7 @@
                                 <div class="img-padding"><img class="owl-lazy" width="250" data-src="https://cdn.fit-z.com/cs/products//33/53/55/250x250.jpg" alt="T-Shirt Dream" title="T-Shirt Dream"> </div>
                                 <div class="details-name">T-Shirt Dream</div>
                                 <div class="price">
-                                    <div class="price"> <span class="formatted-value ">17,95 €</span> </div>
+                                    <div class="price"> <span class="formatted-value">17,95 €</span> </div>
                                 </div>
                             </a>
                         </div>
