--- a/jakoo-com/partials-l2/content/pds-price.html
+++ b/jakoo-com/partials-l2/content/pds-price.html
@@ -14,7 +14,7 @@
 
                     </div>
                     <div class="price">
-                        <div style="display:flex;">
+                        <div style="display:flex">
                             <span class="discount-percentage">-38% </span>
                             <span class="cross-out-price">4234,95 €</span>
                         </div>
@@ -23,7 +23,7 @@
                 </div>
             </div>
         </div>
-        <div class="price-personalize text-xs-right" style="display:none;">
+        <div class="price-personalize text-xs-right" style="display:none">
             <small>Personalisierung <strong>+ 5,00 €</strong></small>
         </div>
     </div>
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="price-personalize text-xs-right" style="display:none;">
+        <div class="price-personalize text-xs-right" style="display:none">
             <small>Personalisierung <strong>+ 5,00 €</strong></small>
         </div>
     </div>
@@ -66,7 +66,7 @@
 
                     </div>
                     <div class="price">
-                        <div style="display:flex;">
+                        <div style="display:flex">
                             <span class="discount-percentage">-38% </span>
                             <span class="cross-out-price">4234,95 €</span>
                         </div>
@@ -75,10 +75,10 @@
                 </div>
             </div>
         </div>
-        <div class=" text-xs-right">
-            <small>2,00€ / 100g</strong></small>
+        <div class="text-xs-right">
+            <small>2,00€ / 100g</small>
         </div>
-        <div class="price-personalize text-xs-right" style="display:none;">
+        <div class="price-personalize text-xs-right" style="display:none">
             <small>Personalisierung <strong>+ 5,00 €</strong></small>
         </div>
     </div>
