--- a/jakoo-com/partials-l2/footer.html
+++ b/jakoo-com/partials-l2/footer.html
@@ -102,7 +102,7 @@
                                 <span class="col-xs-3 col-md-4 col-sm-3">
                         			<img src="https://cdn.fit-z.com/content/shop/katalogtitel/fitz-fk17-sm.png" alt="">
                         		</span>
-                                <p style="margin-bottom: 0.3em " class="col-xs-9 col-md-8 col-sm-9">Hier kostenlos Katalog anfordern ›</p>
+                                <p style="margin-bottom: 0.3em" class="col-xs-9 col-md-8 col-sm-9">Hier kostenlos Katalog anfordern ›</p>
                             </a>
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                                 <span class="col-xs-3 col-md-4 col-sm-3">
                         			<img src="https://cdn.jako-o.de/content/shop/blaetterkatalog/bk-ani-fk17.gif" alt="">
                         		</span>
-                                <p style="margin-bottom: 0.3em " class="col-xs-9 col-md-8 col-sm-9">Kostenlos blättern ›</p>
+                                <p style="margin-bottom: 0.3em" class="col-xs-9 col-md-8 col-sm-9">Kostenlos blättern ›</p>
                             </a>
                         </div>
                     </div>
@@ -133,7 +133,7 @@
                         </div>
                         <form id="registrationForm" class="newsletter-registration-form" action="/de_DE/newsletter/registration?formUrl=/newsletterRegistration&amp;successUrl=/newsletterRegistrationSuccess" method="post">
                             <div class="form-group control-group">
-                                <label class="control-label " for="form_email">
+                                <label class="control-label" for="form_email">
                         			<span>E-Mail-Adresse:</span>
                         			<span class="mandatory" title="Pflichtfeld">
                         					*</span>
@@ -197,8 +197,8 @@
                     <div class="links">
                         <div class="title">Sicheres einkaufen:</div>
                         <div class="m-b-1">
-                            <img src="images/ehi-logo.png" border="0" width="60" alt="EHI">
-                            <img src="images/ssl.png" border="0" width="60" alt="SSL">
+                            <img src="images/ehi-logo-a3f467df4e.png" border="0" width="60" alt="EHI">
+                            <img src="images/ssl-d3d9674775.png" border="0" width="60" alt="SSL">
                         </div>
                         <div>
                             <p class="mB10">Sichere Zahlung mit SSL-Verschlüsselung</p>
@@ -233,17 +233,17 @@
                     <div class="row row-xs-center social-icons">
                         <div style="margin:0.5em">
                             <a href="#" title="facebook">
-                                <img src="images/social/facebook.png" width="32" alt="">
+                                <img src="images/social/facebook-f67892e414.png" width="32" alt="">
                             </a>
                         </div>
                         <div style="margin:0.5em">
                             <a href="#" title="instgram">
-                                <img src="images/social/instagram.png" width="32" alt="">
+                                <img src="images/social/instagram-c1a032c4d1.png" width="32" alt="">
                             </a>
                         </div>
                         <div style="margin:0.5em">
                             <a href="#" title="youtube">
-                                <img src="images/social/youtube.png" width="32" alt="">
+                                <img src="images/social/youtube-38fb7941d6.png" width="32" alt="">
                             </a>
                         </div>
                     </div>
