--- a/jakoo-com/partials-l2/metanavigation.html
+++ b/jakoo-com/partials-l2/metanavigation.html
@@ -5,8 +5,8 @@
                 <ul class="metanavigation--list list-unstyled flex-items-xs-left">
                     <li>
                         <a href="#" class="meta-link">
-                            <span class='sprite -german'>
-                              <svg viewBox="0 0 1 1" width="20"><use xlink:href='images/icons.svg#german' /></use></svg>
+                            <span class="sprite -german">
+                              <svg viewBox="0 0 1 1" width="20"><use xlink:href="images/icons-39f292c110.svg#german"/></svg>
                             </span>
                             <span>Deutsch <span class="text-muted">(Change language)</span></span>
                         </a>
@@ -18,8 +18,8 @@
                     <li>
                         <a href="#" class="meta-link">
 
-                            <span class='sprite -icon_login'>
-                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_login' /></use></svg>
+                            <span class="sprite -icon_login">
+                                  <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_login"/></svg>
                                 </span>
                             <span>Anmelden</span>
                         </a>
@@ -27,8 +27,8 @@
                     <li>
                         <a href="#" class="meta-link">
 
-                            <span class='sprite -icon_user'>
-                              <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_user' /></use></svg>
+                            <span class="sprite -icon_user">
+                              <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_user"/></svg>
                             </span>
                             <span>Mein Kundenkonto</span>
                         </a>
@@ -36,8 +36,8 @@
                     <li>
                         <a href="#" class="meta-link">
 
-                            <span class='sprite -icon_form'>
-                              <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_form' /></use></svg>
+                            <span class="sprite -icon_form">
+                              <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_form"/></svg>
                             </span>
                             <span>Direktbestellformular</span>
                         </a>
@@ -45,8 +45,8 @@
                     <li>
                         <a href="#" class="meta-link">
 
-                            <span class='sprite -icon_adduser'>
-                              <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_adduser' /></use></svg>
+                            <span class="sprite -icon_adduser">
+                              <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_adduser"/></svg>
                             </span>
                             <span>Freundschaftswerbung</span>
                         </a>
@@ -54,8 +54,8 @@
                     <li>
                         <a href="#" class="meta-link">
 
-                            <span class='sprite -icon_shops'>
-                              <svg viewBox="0 0 1 1" width="16"><use xlink:href='images/icons.svg#icon_shops' /></use></svg>
+                            <span class="sprite -icon_shops">
+                              <svg viewBox="0 0 1 1" width="16"><use xlink:href="images/icons-39f292c110.svg#icon_shops"/></svg>
                             </span>
                             <span>Alle Filialen</span>
                         </a>
