--- a/jakoo-com/partials-l2/short-header.html
+++ b/jakoo-com/partials-l2/short-header.html
@@ -5,25 +5,25 @@
                 <ul class="advantages-list">
                     <li class="advantages-list--item">
                         <span class="sprite -icon_done">
-                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#icon_done"></use></svg>
+                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#icon_done"></use></svg>
                         </span>
                         <span>Kein Mindestbestellwert</span>
                     </li>
                     <li class="advantages-list--item">
                         <span class="sprite -icon_done">
-                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#icon_done"></use></svg>
+                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#icon_done"></use></svg>
                         </span>
                         <span>Ersatzteilservice</span>
                     </li>
                     <li class="advantages-list--item">
                         <span class="sprite -icon_done">
-                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#icon_done"></use></svg>
+                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#icon_done"></use></svg>
                         </span>
                         <span>Kostenloses Rückgaberecht</span>
                     </li>
                     <li class="advantages-list--item">
                         <span class="sprite -icon_done">
-                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons.svg#icon_done"></use></svg>
+                            <svg viewBox="0 0 1 1" width="16"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="images/icons-39f292c110.svg#icon_done"></use></svg>
                         </span>
                         <span>Sorgfältig getestete Ware</span>
                     </li>
@@ -40,7 +40,7 @@
                 <div class="site-logo">
                     <div class="content" data-teaser="comp_000007PT" data-content="Site Logo CDN">
                         <a href="index.html">
-                            <img src="images/j-logo.png" width="200" alt="JAKO-O">
+                            <img src="images/j-logo-11198642ed.png" width="200" alt="JAKO-O">
                         </a>
                     </div>
                 </div>
@@ -52,8 +52,8 @@
             </div>
             <div class="col-md-4 col-xs-5 offset-xs-3 offset-sm-4 offset-md-0 mini-cart-slot" id="miniCartSlot">
                 <div class="content" data-teaser="paragraphTrustedOnlineShop" data-content="CMSParagraphComponent">
-                    <img src="images/ehi-logo.png" border="0" width="50" alt="EHI">
-                    <img src="images/ssl.png" border="0" width="50" alt="SSL">
+                    <img src="images/ehi-logo-a3f467df4e.png" border="0" width="50" alt="EHI">
+                    <img src="images/ssl-d3d9674775.png" border="0" width="50" alt="SSL">
                 </div>
             </div>
         </div>
