--- a/jakoo-com/partials-l1/content.html
+++ b/jakoo-com/partials-l1/content.html
@@ -22,13 +22,13 @@
         </div>
     </div>
 
-    <div class="row" style="margin-top:5em;">
+    <div class="row" style="margin-top:5em">
         <div class="col-xs-12 col-md-6">
             <button id="button">Manually Load Async Module</button>
             <p data-module="Highlight">An auto-loaded async module highlighted this!</p>
         </div>
     </div>
-    <div style="height:500px;">
+    <div style="height:500px">
 
     </div>
 </div>
