--- a/jakoo-com/partials-l2/content/hp.html
+++ b/jakoo-com/partials-l2/content/hp.html
@@ -4,23 +4,23 @@
 <div class="container content-container">
     <div class="row">
         <div class="col-xs-12 m-t-1">
-            <a href="#"><img src="images/hp/j-hp-dummy-01.png" alt=""></a>
+            <a href="#"><img src="images/hp/j-hp-dummy-01-9d5efcee47.png" alt=""></a>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12 m-t-1">
-            <a href="#"><img src="images/hp/j-hp-dummy-02.jpg" alt=""></a>
+            <a href="#"><img src="images/hp/j-hp-dummy-02-c9dface8fa.jpg" alt=""></a>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-4 m-t-1">
-            <a href="#"><img src="images/hp/j-hp-dummy-03.jpg" alt=""></a>
+            <a href="#"><img src="images/hp/j-hp-dummy-03-e3cad17a66.jpg" alt=""></a>
         </div>
         <div class="col-xs-12 col-md-4 m-t-1">
-            <a href="#"><img src="images/hp/j-hp-dummy-04.jpg" alt=""></a>
+            <a href="#"><img src="images/hp/j-hp-dummy-04-f78101a6ff.jpg" alt=""></a>
         </div>
         <div class="col-xs-12 col-md-4 m-t-1">
-            <a href="#"><img src="images/hp/j-hp-dummy-05.jpg" alt=""></a>
+            <a href="#"><img src="images/hp/j-hp-dummy-05-3fb88f1f0c.jpg" alt=""></a>
         </div>
     </div>
 </div>
