--- a/jakoo-com/partials-l2/content/landingpage1.html
+++ b/jakoo-com/partials-l2/content/landingpage1.html
@@ -57,7 +57,7 @@ hallo
         </div>
         <div class="col-xs-4">
 
-            <div class="card" style="width: 20rem;">
+            <div class="card" style="width: 20rem">
                 <img class="card-img-top" src="..." alt="Card image cap">
                 <div class="card-block">
                     <h4 class="card-title">Card title</h4>
