--- a/jakoo-com/partials-l2/content/test.html
+++ b/jakoo-com/partials-l2/content/test.html
@@ -130,10 +130,10 @@ $(document).ready(function() {
 </div>
 <div class="mag_content"> <span class="preheadline">Ein schauriges Fest:</span>
     <h1>Wie bastle ich Halloween-Einladungen mit Kindern?</h1>
-    <div style="margin: 1em auto;"><img src="https://cdn.jako-o.de/content/magazin/Halloween_Einladungen_123_650.jpg" alt="Wie bastle ich Halloween Einladungen mit Kindern?">
+    <div style="margin: 1em auto"><img src="https://cdn.jako-o.de/content/magazin/Halloween_Einladungen_123_650.jpg" alt="Wie bastle ich Halloween Einladungen mit Kindern?">
         <p class="img_ref">&copy; 123RF</p>
     </div>
-    <p>Hilfe, die Monster, Geister und <a target='_blank' href='/produkte-geburtstag-themenpartys-hexenparty--00116016/'>Hexen</a> kommen! An einer Halloween-Party hat Ihr Kind bestimmt besonders viel Spaß, wenn es sich verkleiden kann und alles unheimlich geschmückt wird. Wenn Sie eine Party für kleine Gespenster planen, sollten natürlich auch angemessen gruselige Einladungen nicht fehlen, die Ihr Kind dann an seine Freunde verteilen kann. Selbstgemachte Einladungskarten machen schon beim <a target='_blank' href='/produkte-basteln--00004006/'>Basteln</a> Spaß und lassen sich gemeinsam mit Ihrem Kind einfach herstellen. Wir haben ein paar Anregungen, wie Sie besonders schaurige Halloween-Einladungen basteln können.</p>
+    <p>Hilfe, die Monster, Geister und <a target="_blank" href="/produkte-geburtstag-themenpartys-hexenparty--00116016/">Hexen</a> kommen! An einer Halloween-Party hat Ihr Kind bestimmt besonders viel Spaß, wenn es sich verkleiden kann und alles unheimlich geschmückt wird. Wenn Sie eine Party für kleine Gespenster planen, sollten natürlich auch angemessen gruselige Einladungen nicht fehlen, die Ihr Kind dann an seine Freunde verteilen kann. Selbstgemachte Einladungskarten machen schon beim <a target="_blank" href="/produkte-basteln--00004006/">Basteln</a> Spaß und lassen sich gemeinsam mit Ihrem Kind einfach herstellen. Wir haben ein paar Anregungen, wie Sie besonders schaurige Halloween-Einladungen basteln können.</p>
 </div>
 <div class="mag_content">
     <h2>Aufklappbare Halloween-Einladungskarten gestalten</h2>
@@ -148,8 +148,8 @@ $(document).ready(function() {
     <div class="mag_download">
         <a target="_blank" href="https://cdn.jako-o.de/content/magazin/pdfs/Halloween/Einladungskarten.pdf">
             <h3><span class="inline-logo"></span> Vorlagen für Halloween-Einladungen</h3>
-            <div class="mag_download_preview"><img src="https://cdn.jako-o.de/content/magazin/btn/btn_einladungskarten.png" alt="Halloween Einladungskarten" style="width:130px" /></div>
-            <div class="mag_download_content"> <img class="badge" src="https://cdn.jako-o.de/content/magazin/btn/btn_gratis-ausdrucken.png" alt="Gratisdownload" style="margin-top:-17px;">
+            <div class="mag_download_preview"><img src="https://cdn.jako-o.de/content/magazin/btn/btn_einladungskarten.png" alt="Halloween Einladungskarten" style="width:130px"></div>
+            <div class="mag_download_content"> <img class="badge" src="https://cdn.jako-o.de/content/magazin/btn/btn_gratis-ausdrucken.png" alt="Gratisdownload" style="margin-top:-17px">
                 <ul class="enum">
                     <li>Herbstlich-schaurige Fotomotive als Postkarten</li>
                     <li>Der einfachste Weg um die Gruselparty bekannt zu geben</li>
@@ -174,24 +174,24 @@ $(document).ready(function() {
         <li>Zettel für den Einladungstext</li>
     </ul>
     <div class="mag_highlight slider_green">
-        <div class="owl-carousel " id="owl-01">
+        <div class="owl-carousel" id="owl-01">
             <div class="item">
                 <p><b>Gruselige Fledermaus:</b>Die Klopapierrolle schwarz anmalen und auf schwarzem Tonpapier zwei Flügel aufmalen (dabei an eine extra Fläche zum Aufkleben denken), die Ihr Kind ausschneiden kann. Wenn die Flügel an der Rolle befestigt sind, fehlen nur noch das Gesicht und die gefährlichen Fangzähne, die ganz einfach auf die Fledermaus gemalt werden können.</p>
             </div>
             <div class="item">
                 <p><b>Kleine Mumie:</b>(extra: Mullbinden, Wackelaugen)
-                    <br/>Die Rolle wird zunächst mit weißer Farbe bemalt und sollte dann trocknen. Im Anschluss die Wackelaugen aufkleben und mit einer Mullbinde umwickeln. Bei dieser Variante brauchen Sie nicht unbedingt Krepppapier, denn Sie können die Enden auch mit dem Verband verschließen. Damit nichts verrutscht, können Sie beim Umwickeln etwas Kleber auf die Mullbinden tropfen. </p>
+                    <br>Die Rolle wird zunächst mit weißer Farbe bemalt und sollte dann trocknen. Im Anschluss die Wackelaugen aufkleben und mit einer Mullbinde umwickeln. Bei dieser Variante brauchen Sie nicht unbedingt Krepppapier, denn Sie können die Enden auch mit dem Verband verschließen. Damit nichts verrutscht, können Sie beim Umwickeln etwas Kleber auf die Mullbinden tropfen. </p>
             </div>
             <div class="item">
                 <p><b>Haarige Spinne:</b>(extra: schwarze Pfeifenputzer, Wackelaugen, spitzer Bleistift)
-                    <br/>Die Rolle wird schwarz angemalt. Danach kann mit weißer Farbe ein Gesicht aufgemalt werden. Die Augen wirken besonders schaurig, wenn Sie dafür Wackelaugen verwenden. Im Anschluss pieken Sie mit dem Bleistift jeweils vier Löcher in die Seiten der Rolle und stecken die zugeschnittenen Pfeifenputzer als Spinnenbeine hinein.</p>
+                    <br>Die Rolle wird schwarz angemalt. Danach kann mit weißer Farbe ein Gesicht aufgemalt werden. Die Augen wirken besonders schaurig, wenn Sie dafür Wackelaugen verwenden. Im Anschluss pieken Sie mit dem Bleistift jeweils vier Löcher in die Seiten der Rolle und stecken die zugeschnittenen Pfeifenputzer als Spinnenbeine hinein.</p>
             </div>
         </div>
     </div>
 </div>
 <div class="mag_content">
     <h2>Unheimliche Einladungstexte: So gruseln sich die Gäste schon vorher</h2>
-    <div style="margin: 1em auto;"><img src="https://cdn.jako-o.de/content/magazin/Halloween_Einladungen_123_650_2.jpg" alt="Wie bastle ich Halloween Einladungen mit Kindern?">
+    <div style="margin: 1em auto"><img src="https://cdn.jako-o.de/content/magazin/Halloween_Einladungen_123_650_2.jpg" alt="Wie bastle ich Halloween Einladungen mit Kindern?">
         <p class="img_ref">&copy; 123RF</p>
     </div>
     <p>Damit den kleinen Gästen schon vor der Party ein Schauer über den Rücken läuft, können Sie nicht nur die Einladungskarte, sondern auch den Text schaurig gestalten. Überlegen Sie gemeinsam mit Ihrem Kind, wie der Text lauten soll. Sie können diesen auch auf dem Computer schreiben und eine besonders unheimliche Schriftart auswählen. Der Name des Gastes kann nach dem Ausdrucken vom stolzen Gastgeber – evtl. mit Unterstützung – nachgetragen werden. Wie wäre es mit diesen Gruseltexten:</p>
