--- a/jakoo-com/02-pds-4.html
+++ b/jakoo-com/02-pds-4.html
@@ -1456,11 +1456,11 @@
                 <div class="pds-header-2">
                     <div class="row m-b-1">
                         <div class="col-xs-6">
-                            <a href="02-pds-4-2.html">&lsaquo; Vorheriger Artikel</a>
+                            <a href="index.html">&lsaquo; Vorheriger Artikel</a>
                         </div>
                         <div class="col-xs-6">
                             <div style="text-align:right">
-                                <a href="02-pds-4-2.html">Nächster Artikel &rsaquo;</a>
+                                <a href="index.html">Nächster Artikel &rsaquo;</a>
                             </div>
                         </div>
                     </div>
